--- a/resources/templates/os-specific/darwin/sbin/appserver-watcherctl.phtml
+++ b/resources/templates/os-specific/darwin/sbin/appserver-watcherctl.phtml
@@ -14,8 +14,8 @@
  * @link       http://www.appserver.io
  */
 
-use AppserverIo\Meta\Composer\Script\Setup;
-use AppserverIo\Meta\Composer\Script\SetupKeys;
+use AppserverIo\Appserver\Meta\Composer\Script\Setup;
+use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
 
 ?>
 #!/bin/sh
