--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -51,7 +51,7 @@
                     <ul class="list-side-news">
                         {% for post in site.categories.release limit:5 %}
                         <li class="{% if page.title == post.title %}current{% endif %}">
-                            <a href="{{ post.url }}">Version {{ post.version }}</a>
+                            <a href="{{ post.url | prepend: site.baseurl }}">Version {{ post.version }}</a>
                         </li>
                         {% endfor %}
                     </ul>
@@ -64,7 +64,7 @@
                         {% for post in site.posts %}
                         {% unless post.categories contains 'release' %}
                         <li class="{% if page.title == post.title %}current{% endif %}">
-                            <a href="{{ post.url }}">{{ post.title }}</a>
+                            <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
                         </li>
                         {% endunless %}
                         {% endfor %}
