--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,16 +8,18 @@
     {% include header.html %}
 
     <!-- Page Content -->
-    <div class="container">
+    <div class="container-page">
+        <div class="container">
 
-        <!-- Content Section -->
-        <div class="row">
-            <div class="col-lg-12 content">
-                {{ content }}
+            <!-- Content Section -->
+            <div class="row">
+                <div class="col-lg-12 content">
+                    {{ content }}
+                </div>
             </div>
-        </div>
-        <!-- /.row -->
+            <!-- /.row -->
 
+        </div>
     </div>
     <!-- /.container -->
 
