fixed footer, slider and top navigation

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,8 +35,9 @@
 </footer>
 
 <!-- Javascript libraries -->
-<script src="{{ "/assets/js/jquery.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/assets/js/bootstrap.js" | prepend: site.baseurl }}"></script>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
 <!-- Script to Activate the Carousel -->
 <script>
