--- a/_sass/bootstrap/_forms.scss
+++ b/_sass/bootstrap/_forms.scss
@@ -77,7 +77,7 @@ select[size] {
 input[type="file"]:focus,
 input[type="radio"]:focus,
 input[type="checkbox"]:focus {
-  @include tab-focus;
+  @include tab-focus();
 }
 
 // Adjust output element
@@ -128,10 +128,10 @@ output {
   @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
 
   // Customize the `:focus` state to imitate native WebKit styles.
-  @include form-control-focus;
+  @include form-control-focus();
 
   // Placeholder
-  @include placeholder;
+  @include placeholder();
 
   // Disabled and read-only inputs
   //
@@ -141,7 +141,7 @@ output {
   &[disabled],
   &[readonly],
   fieldset[disabled] & {
-    cursor: $cursor-disabled;
+    cursor: not-allowed;
     background-color: $input-bg-disabled;
     opacity: 1; // iOS fix for unreadable disabled content
   }
@@ -170,27 +170,23 @@ input[type="search"] {
 // Special styles for iOS temporal inputs
 //
 // In Mobile Safari, setting `display: block` on temporal inputs causes the
-// text within the input to become vertically misaligned. As a workaround, we
-// set a pixel line-height that matches the given height of the input, but only
-// for Safari.
+// text within the input to become vertically misaligned.
+// As a workaround, we set a pixel line-height that matches the
+// given height of the input. Since this fucks up everything else, we have to
+// appropriately reset it for Internet Explorer and the size variations.
 
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-  input[type="date"],
-  input[type="time"],
-  input[type="datetime-local"],
-  input[type="month"] {
-    line-height: $input-height-base;
-  }
-  input[type="date"].input-sm,
-  input[type="time"].input-sm,
-  input[type="datetime-local"].input-sm,
-  input[type="month"].input-sm {
+input[type="date"],
+input[type="time"],
+input[type="datetime-local"],
+input[type="month"] {
+  line-height: $input-height-base;
+  // IE8+ misaligns the text within date inputs, so we reset
+  line-height: $line-height-base #{\0};
+
+  &.input-sm {
     line-height: $input-height-small;
   }
-  input[type="date"].input-lg,
-  input[type="time"].input-lg,
-  input[type="datetime-local"].input-lg,
-  input[type="month"].input-lg {
+  &.input-lg {
     line-height: $input-height-large;
   }
 }
@@ -214,11 +210,11 @@ input[type="search"] {
 .checkbox {
   position: relative;
   display: block;
+  min-height: $line-height-computed; // clear the floating input if there is no label text
   margin-top: 10px;
   margin-bottom: 10px;
 
   label {
-    min-height: $line-height-computed; // Ensure the input doesn't jump when there is no text
     padding-left: 20px;
     margin-bottom: 0;
     font-weight: normal;
@@ -264,7 +260,7 @@ input[type="checkbox"] {
   &[disabled],
   &.disabled,
   fieldset[disabled] & {
-    cursor: $cursor-disabled;
+    cursor: not-allowed;
   }
 }
 // These classes are used directly on <label>s
@@ -272,7 +268,7 @@ input[type="checkbox"] {
 .checkbox-inline {
   &.disabled,
   fieldset[disabled] & {
-    cursor: $cursor-disabled;
+    cursor: not-allowed;
   }
 }
 // These classes are used on elements with <label> descendants
@@ -281,7 +277,7 @@ input[type="checkbox"] {
   &.disabled,
   fieldset[disabled] & {
     label {
-      cursor: $cursor-disabled;
+      cursor: not-allowed;
     }
   }
 }
@@ -312,11 +308,9 @@ input[type="checkbox"] {
 // Build on `.form-control` with modifier classes to decrease or increase the
 // height and font-size of form controls.
 
-@include input-size('.input-sm', $input-height-small, $padding-small-vertical, $padding-small-horizontal, $font-size-small, $line-height-small, $input-border-radius-small);
-@include input-size('.form-group-sm .form-control', $input-height-small, $padding-small-vertical, $padding-small-horizontal, $font-size-small, $line-height-small, $input-border-radius-small);
+@include input-size('.input-sm', $input-height-small, $padding-small-vertical, $padding-small-horizontal, $font-size-small, $line-height-small, $border-radius-small);
 
-@include input-size('.input-lg', $input-height-large, $padding-large-vertical, $padding-large-horizontal, $font-size-large, $line-height-large, $input-border-radius-large);
-@include input-size('.form-group-lg .form-control', $input-height-large, $padding-large-vertical, $padding-large-horizontal, $font-size-large, $line-height-large, $input-border-radius-large);
+@include input-size('.input-lg', $input-height-large, $padding-large-vertical, $padding-large-horizontal, $font-size-large, $line-height-large, $border-radius-large);
 
 
 // Form control feedback states
@@ -335,7 +329,7 @@ input[type="checkbox"] {
 // Feedback icon (requires .glyphicon classes)
 .form-control-feedback {
   position: absolute;
-  top: 0;
+  top: ($line-height-computed + 5); // Height of the `label` and its margin
   right: 0;
   z-index: 2; // Ensure icon is above input groups
   display: block;
@@ -343,7 +337,6 @@ input[type="checkbox"] {
   height: $input-height-base;
   line-height: $input-height-base;
   text-align: center;
-  pointer-events: none;
 }
 .input-lg + .form-control-feedback {
   width: $input-height-large;
@@ -367,15 +360,10 @@ input[type="checkbox"] {
   @include form-control-validation($state-danger-text, $state-danger-text, $state-danger-bg);
 }
 
-// Reposition feedback icon if input has visible label above
-.has-feedback label {
 
-  & ~ .form-control-feedback {
-     top: ($line-height-computed + 5); // Height of the `label` and its margin
-  }
-  &.sr-only ~ .form-control-feedback {
-     top: 0;
-  }
+// Reposition feedback icon if label is hidden with "screenreader only" state
+.has-feedback label.sr-only ~ .form-control-feedback {
+  top: 0;
 }
 
 
@@ -392,6 +380,7 @@ input[type="checkbox"] {
 }
 
 
+
 // Inline forms
 //
 // Make forms appear inline(-block) by adding the `.form-inline` class. Inline
@@ -403,8 +392,7 @@ input[type="checkbox"] {
 //
 // Heads up! This is mixin-ed into `.navbar-form` in navbars.less.
 
-// [converter] extracted from `.form-inline` for libsass compatibility
-@mixin form-inline {
+.form-inline {
 
   // Kick in the inline
   @media (min-width: $screen-sm-min) {
@@ -420,11 +408,6 @@ input[type="checkbox"] {
       display: inline-block;
       width: auto; // Prevent labels from stacking above inputs in `.form-group`
       vertical-align: middle;
-    }
-
-    // Make static controls behave like regular ones
-    .form-control-static {
-      display: inline-block;
     }
 
     .input-group {
@@ -468,17 +451,15 @@ input[type="checkbox"] {
       margin-left: 0;
     }
 
-    // Re-override the feedback icon.
+    // Validation states
+    //
+    // Reposition the icon because it's now within a grid column and columns have
+    // `position: relative;` on them. Also accounts for the grid gutter padding.
     .has-feedback .form-control-feedback {
       top: 0;
     }
   }
 }
-// [converter] extracted as `@mixin form-inline` for libsass compatibility
-.form-inline {
-  @include form-inline;
-}
-
 
 
 // Horizontal forms
@@ -508,7 +489,7 @@ input[type="checkbox"] {
 
   // Make form groups behave like rows
   .form-group {
-    @include make-row;
+    @include make-row();
   }
 
   // Reset spacing and right align labels, but scope to media queries so that
@@ -526,6 +507,7 @@ input[type="checkbox"] {
   // Reposition the icon because it's now within a grid column and columns have
   // `position: relative;` on them. Also accounts for the grid gutter padding.
   .has-feedback .form-control-feedback {
+    top: 0;
     right: ($grid-gutter-width / 2);
   }
 
@@ -539,12 +521,18 @@ input[type="checkbox"] {
         padding-top: (($padding-large-vertical * $line-height-large) + 1);
       }
     }
+    .form-control {
+      @extend .input-lg;
+    }
   }
   .form-group-sm {
     @media (min-width: $screen-sm-min) {
       .control-label {
         padding-top: ($padding-small-vertical + 1);
       }
+    }
+    .form-control {
+      @extend .input-sm;
     }
   }
 }
