--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -54,12 +54,25 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="{{ "/assets/js/jquery.hipchat.js" | prepend: site.baseurl }}"></script>
 
 <!-- Script to Activate the Carousel -->
 <script>
 $('.carousel').carousel({
   interval: 5000 //changes the speed
 })
+
+$(function () {
+  $('.container-chat').hipChatPanel({
+    url: 'td.hipchat.com/gGgNAXbx6',
+    timezone: 'MST',
+    width: '100%',
+    height: 300,
+    buttonClasses: 'btn btn-info btn-lg',
+    buttonTitle: '<i class="fa fa-weixin"></i> Open Hipchat now!'
+  });
+});
+
 </script>
 
 <!-- Analytics integration -->
