added correct analytics id

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -6,7 +6,7 @@
     L=e.getElementsByTagName(k)[0],l.src='//www.google-analytics.com/analytics.js',
     L.parentNode.insertBefore(l,L)}(window,document,'script','ga');
 
-    ga('create', '{{ site.google_analytics_id }}', '{{ site.google_analytics_site }}');
+    ga('create', '{{ site.google_analytics_id }}', 'auto');
     ga('send', 'pageview');
 
   </script>
