fixed analytics events

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -10,23 +10,23 @@
     ga('send', 'pageview');
 
     $('#btn-download-osx').on('click', function() {
-      ga('send', 'event', 'button', 'click', 'download', 'osx');
+      ga('send', 'event', 'download-btn', 'click', 'osx');
     });
 
     $('#btn-download-win').on('click', function() {
-      ga('send', 'event', 'button', 'click', 'download', 'win');
+      ga('send', 'event', 'download-btn', 'click', 'win');
     });
 
     $('#btn-download-debian').on('click', function() {
-      ga('send', 'event', 'button', 'click', 'download', 'debian');
+      ga('send', 'event', 'download-btn', 'click', 'debian');
     });
 
     $('#btn-download-fedora').on('click', function() {
-      ga('send', 'event', 'button', 'click', 'download', 'fedora');
+      ga('send', 'event', 'download-btn', 'click', 'fedora');
     });
 
     $('#btn-download-centos').on('click', function() {
-      ga('send', 'event', 'button', 'click', 'download', 'centos');
+      ga('send', 'event', 'download-btn', 'click', 'centos');
     });
 
   </script>
