Closed #293 - Manager configuration by annotations

--- a/resources/templates/etc/appserver/appserver.xml.phtml
+++ b/resources/templates/etc/appserver/appserver.xml.phtml
@@ -30,7 +30,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
     <!--
     <initialContext type="AppserverIo\Appserver\Core\InitialContext">
         <description><![CDATA[The initial context configuration.]]></description>
-        <classLoader name="default" type="AppserverIo\Appserver\Core\SplClassLoader" />
+        <classLoader name="SplClassLoader" type="AppserverIo\Appserver\Core\SplClassLoader" />
         <storage type="AppserverIo\Storage\StackableStorage" />
     </initialContext>
 
